@@ -1,5 +1,8 @@
 1998-08-19  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
 
+	* HeatbugBatchSwarm.m ([HeatbugBatchSwarm -buildObjects]): 
+	Use ObjectLoader's fromAppConfigFileNamed: instead of fromfileNamed:.
+
 	* Makefile (APPLIBS): Remove.
 	(DATAFILES): For ant.png.
 	(SWARMHOME): Bump default to 1998-08-19.
